--- a/README.rdoc
+++ b/README.rdoc
@@ -1,28 +1,60 @@
-== README
+# Where To
 
-This README would normally document whatever steps are necessary to get the
-application up and running.
+## Overview
 
-Things you may want to cover:
+Where To allows users understand and visualise the culture of cities around the world. The data gathered from the Meetup API has been used to determine the relative importance of each of the 33 categories, based on the number of groups in each city. This provides users with meaningful information regarding the cities they are most likely to find people with a common interest.
 
-* Ruby version
+## Technologies used
 
-* System dependencies
+1. Ruby on Rails
+2. JavaScript, including the following libraries:
+  - [Chart.js](http://www.chartjs.org/)
+  - [D3.js](http://d3js.org/)
+  - jQuery
+  - Ajax
+3. Meetup API
+4. PostgreSQL
+5. HTML5
+6. CSS3
+7. Heroku hosting
 
-* Configuration
+## Key features
 
-* Database creation
+- Users select a category they are interested in and are shown a bar chart with the top 10 cities for which there are groups relevant to that category
+- Users are shown a doughnut chart displaying the proportion of groups in the selected category compared to total groups (the chart also displays the slice-up of each of the 33 categories in that city)
+- Users can compare city culture information with another city
+- Users can select a city on the map and be directed to the relevant city's Meetup.com page
 
-* Database initialization
+## Features to be added
 
-* How to run the test suite
+- Make cities on the map clickable to display city culture information to the user
 
-* Services (job queues, cache servers, search engines, etc.)
+## Links
 
-* Deployment instructions
+Check out the site - [https://[SOMETHING].herokuapp.com/](https://[SOMETHING].herokuapp.com/)
 
-* ...
+## Approach / design notes
 
+#### Planning
 
-Please feel free to use a different markup language if you do not plan to run
-<tt>rake doc:app</tt>.
+Wireframe:
+
+Wireframe:
+
+![Image of Wireframe](https://files.slack.com/files-pri/T0351JZQ0-F0FBLJN8K/pasted_image_at_2015_11_27_01_06_am.png?pub_secret=367ac51341)
+
+Database tables:
+
+![Image of Database tables](https://files.slack.com/files-pri/T0351JZQ0-F0FBP0RHU/where_to.png?pub_secret=09a6c11088)
+
+## Acknowledgements
+
+##### Group members
+
+- [Helen](https://github.com/hhabakuk)
+- [Bono](https://github.com/bonogit)
+- [Aviel](https://github.com/avielgoh)
+
+Thanks to [DT](https://github.com/epoch), [Matt](https://github.com/mattswann) and the WDI4 appleandriods class for all your assistance and guidance!
+
+*This project was undertaken as part of the General Assembly WDI course I undertook in 2015.*
